[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "filesystem-server"
version = "0.1.0"
description = "MCP Filesystem & Terminal Server"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
]

[project.scripts]
filesystem-server = "filesystem_server.server:mcp.run"

[tool.setuptools.packages.find]
where = [".."]
include = ["filesystem_server*"]
