[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sos"
version = "0.1.0"
description = "MCP Server for ClioSoft SOS version control"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
]

[project.scripts]
sos = "sos.server:mcp.run"

[tool.setuptools.packages.find]
where = [".."]
include = ["sos*"]
